--- a/maquinaria/maquinaria.html
+++ b/maquinaria/maquinaria.html
@@ -11,138 +11,140 @@
     <script src="https://kit.fontawesome.com/e3f8e58329.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="../jquery.slim.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="assets/css/estilos.css">
 </head>
 <body class="colormaq">
-    <header>
-<div><h1 class="pagetitle">maquinaria</h1></div>
-<a href="../index.html"><h4>pagina principal</h4></a>
-<nav>
-    <ul>
-        <li>
-            <a href="../maquinaria/maquinaria.html">maquinaria</a>
-        </li>
-        <li>
-        <a href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a>
-        </li>
-        <li>
-            <a href="../productos/productos.html">productios</a>
-        </li>
-        <li>
-            <a href="../servicios/servicios.html">servicios</a>
-        </li>
-    </ul>
-</nav>
-</header>
-<section class="papi">
-    <div class="container" style="display: flex;">
-        <div class="content"><h6>termonebulizadora</h6><img src="../assets/imagenes/termo fog.jpg" alt=""width="100px"height="100"></div>
-        <div class="content"><h6>aspersora manual</h6><img src="../assets/imagenes/aspersora manual.jpg" alt=""width="100px"height="100"></div>
-        <div class="content"><h6>hydrospaner</h6><img src="../assets/imagenes/hydrpspanner.jpg" alt=""width="100px"height="100"></div>
-        <div class="content"><h6>Ulv</h6><img src="../assets/imagenes/ULV.jpg" alt=""width="100px"height="100"></div>
-        <div class="content"><h6>CR7</h6><img src="../assets/imagenes/cr7.jpg" alt=""width="100px"height="100"></div>
-        <div class="content"><h6>motomochila</h6><img src="../assets/imagenes/motomochila.jpg" alt=""width="100px"height="100"></div>
-        <div class="content"><h6>motomami</h6><img src="../assets/imagenes/la verdadera jefa.png" alt=""width="100px"height="100"></div>
+    <header class="headerfooter">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></div>
+                <div class="col-6 d-flex align-items-center">
+                        <ul>
+                            <li><a class="navbarheader" href="../index.html">INICIO</a></li>
+                            <li><a class="navbarheader" href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a></li>
+                            <li><a class="navbarheader" href="../maquinaria/maquinaria.html">maquinaria</a></li>
+                            <li><a class="navbarheader" href="../productos/productos.html">productos</a></li>
+                            <li><a class="navbarheader" href="../servicios/servicios.html">servicios</a></li>
+                        </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-12 d-flex justify-content-center"><h3>Maquinaria</h3></div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
+                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">Motomochila</p>
+                    </div>
+                    <img src="../assets/imagenes/motomochila.jpg" alt="Card image">
+                    <div class="card-body">
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam nam magni natus rem voluptates</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
+                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">pulverizadora manual</p>
+                    </div>
+                    <img src="../assets/imagenes/aspersora manual.jpg" alt="Card image">
+                    <div class="card-body">
+                        <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos, dolore voluptatum? Rem q</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
+                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">termo-fog</p>
+                    </div>
+                    <img src="../assets/imagenes/termo fog.jpg" alt="Card image">
+                    <div class="card-body">
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Off.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
+                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">ULV</p>
+                    </div>
+                    <img src="../assets/imagenes/ULV.jpg" alt="Card image">
+                    <div class="card-body">
+                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis, atque ad. Esse expedita nulla velit co</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
+                                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">NOSE MAN</p>
+                    </div>
+                    <img src="../assets/imagenes/motomochila.jpg" alt="Card image">
+                    <div class="card-body">
+                        <p class="card-text">of a card.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
+                                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">This image is in the middle</p>
+                    </div>
+                    <img src="/images/pathToYourImage.png" alt="Card image">
+                    <div class="card-body">
+                        <p class="card-text">of a card.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
+                                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">This image is in the middle</p>
+                    </div>
+                    <img src="/images/pathToYourImage.png" alt="Card image">
+                    <div class="card-body">
+                        <p class="card-text">of a card.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
+                                <div class="card">
+                    <div class="card-body">
+                        <p class="card-text">This image is in the middle</p>
+                    </div>
+                    <img src="/images/pathToYourImage.png" alt="Card image">
+                    <div class="card-body">
+                        <p class="card-text">of a card.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</section>
-<section class="papucho">
-    <article class="containerii" style="display: flex;">
-        <div class="contentii">
-            <h4>termonebulizadora</h4>
-            <p>¡Mi triste corazón babea a popa,
-        mi corazón que colma el caporal
-        y me vierten en él chorros de sopa,
-        mi triste corazón babea a popa:
-        con las bromas sangrientas de la tropa
-        que brama un carcajeo general,
-        mi triste corazón babea a popa,
-        mi corazón que colma el caporal!</p>
-        </div>
-        <div class="contentii">
-            <h4>aspersora manual</h4>
-            <p>Itiofálicos y soldadinescos
-            sus chistes sangrientos lo han depravado;
-            y de noche componen unos frescos
-            itiofálicos y soldadinescos.
-            ¡Oleajes abracadabrantescos
-            llevadme el corazón, que sea lavado!
-            Itiofálicos y soldadinescos
-            sus chistes sangrientos lo han depravado.</p>
-        </div>
-        <div class="contentii">
-            <h4>hydrospaner</h4>
-            <p>Cuando se agoten sus chimós gargálicos
-            ¿cómo vivir, oh corazón robado?
-            llegarán con sus estribillos báquicos;
-            cuando se agoten sus chimós gargálicos
-            sentiré sobresaltos estomáquicos,
-            yo, el del corazón despedazado.
-            Cuando se agoten sus chimós gargálicos
-            ¿cómo vivir, oh corazón robado?</p>
-        </div>
-        <div class="contentii">
-            <h4>Ulv</h4>
-            <p>Mientras que los gargajos rojos de la metralla
-            silban surcando el cielo azul, día tras día,
-            y que, escarlata o verdes, cerca del rey que ríe
-            se hunden batallones que el fuego incendia en masa;</p>
-        </div>
-        <div class="contentii">
-            <h4>termonebulizadora</h4>
-            <p>¡Mi triste corazón babea a popa,
-        mi corazón que colma el caporal
-        y me vierten en él chorros de sopa,
-        mi triste corazón babea a popa:
-        con las bromas sangrientas de la tropa
-        que brama un carcajeo general,
-        mi triste corazón babea a popa,
-        mi corazón que colma el caporal!</p>
-        </div>
-        <div class="contentii">
-            <h4>aspersora manual</h4>
-            <p>Itiofálicos y soldadinescos
-            sus chistes sangrientos lo han depravado;
-            y de noche componen unos frescos
-            itiofálicos y soldadinescos.
-            ¡Oleajes abracadabrantescos
-            llevadme el corazón, que sea lavado!
-            Itiofálicos y soldadinescos
-            sus chistes sangrientos lo han depravado.</p>
-        </div>
-        <div class="contentii">
-            <h4>hydrospaner</h4>
-            <p>Cuando se agoten sus chimós gargálicos
-            ¿cómo vivir, oh corazón robado?
-            llegarán con sus estribillos báquicos;
-            cuando se agoten sus chimós gargálicos
-            sentiré sobresaltos estomáquicos,
-            yo, el del corazón despedazado.
-            Cuando se agoten sus chimós gargálicos
-        ¿cómo vivir, oh corazón robado?</p>
-        </div>
-        <div class="contentii">
-            <h4>Ulv</h4>
-            <p>Mientras que los gargajos rojos de la metralla
-            silban surcando el cielo azul, día tras día,
-            y que, escarlata o verdes, cerca del rey que ríe
-            se hunden batallones que el fuego incendia en masa;</p>
-        </div>
-    </article>
-</section>
 <footer>
     <section>
-        <div class="colorfooter">
-            <h3 class="mifooty">Contactanos</h3>
-                <div class="estilosfooterpapi">
-                    <span>4294-0805</span>
-                    <span>11-039-456</span>
-                    <span>instagram</span> 
-                    <span>facebook</span>
+        <div class="headerfooter">
+                <div class="d-flex justify-content-around">
+                    <span class="navbarheader">4294-0805</span>
+                    <span class="navbarheader">11-039-456</span>
+                    <span class="navbarheader">instagram</span> 
+                    <span class="navbarheader">facebook</span>
                 </div>
-                <div class="estilosfooterpapiimagenes">
-                    <i class="fa fa-phone"></i>
-                    <i class="fa fa-whatsap"></i>
-                    <i class="fa fa-instagram"></i>
-                    <i class="fa fa-facebook"></i>
+                <div class="d-flex justify-content-around">
+                    <i class="fa fa-phone navbarheader"></i>
+                    <i class="fa-brands fa-whatsapp navbarheader"></i>
+                    <i class="fa fa-instagram navbarheader"></i>
+                    <i class="fa fa-facebook navbarheader"></i>
                 </div>
         </div>
     </section>
