--- a/productos/productos.html
+++ b/productos/productos.html
@@ -11,33 +11,45 @@
     <script src="https://kit.fontawesome.com/e3f8e58329.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="../jquery.slim.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="assets/css/estilos.css">
 </head>
 <body>
-<header>
-    <div><h1 class="pagetitle">productos</h1></div>
-<a href="../index.html"><h4>pagina principal</h4></a>
-<nav>
-    <ul>
-        <li>
-            <a href="../maquinaria/maquinaria.html">maquinaria</a>
-        </li>
-        <li>
-        <a href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a>
-        </li>
-        <li>
-            <a href="../productos/productos.html">productios</a>
-        </li>
-        <li>
-            <a href="../servicios/servicios.html">servicios</a>
-        </li>
-    </ul>
-</nav>
-</header>
-<section>
-    <div><h2>¿que productos utilizamos?</h2></div>
-    <p>solo productos habilitados por senasa en provincia de buenos aires y capital fededal, los cuales no son toxicos para humanos ni mascotas</p>
-</section>
+    <header class="headerfooter">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></div>
+                <div class="col-6 d-flex align-items-center">
+                        <ul>
+                            <li><a class="navbarheader" href="../index.html">INICIO</a></li>
+                            <li><a class="navbarheader" href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a></li>
+                            <li><a class="navbarheader" href="../maquinaria/maquinaria.html">maquinaria</a></li>
+                            <li><a class="navbarheader" href="../productos/productos.html">productos</a></li>
+                            <li><a class="navbarheader" href="../servicios/servicios.html">servicios</a></li>
+                        </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+que productos utilizamos
 <footer>
-    este es mi footer
+    <section>
+        <div class="headerfooter">
+                <div class="d-flex justify-content-around">
+                    <span class="navbarheader">4294-0805</span>
+                    <span class="navbarheader">11-039-456</span>
+                    <span class="navbarheader">instagram</span> 
+                    <span class="navbarheader">facebook</span>
+                </div>
+                <div class="d-flex justify-content-around">
+                    <i class="fa fa-phone navbarheader"></i>
+                    <i class="fa-brands fa-whatsapp navbarheader"></i>
+                    <i class="fa fa-instagram navbarheader"></i>
+                    <i class="fa fa-facebook navbarheader"></i>
+                </div>
+        </div>
+    </section>
 </footer>
 </body>
