--- a/servicios/servicios.html
+++ b/servicios/servicios.html
@@ -11,81 +11,125 @@
     <script src="https://kit.fontawesome.com/e3f8e58329.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Anek+Latin:wght@100&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="../jquery.slim.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../assets/css/estilos.css">
+
 </head>
 <body>
-    <header>
-<div><h1 class="pagetitle">servicios</h1></div>
-<a href="../index.html"><h4>pagina principal</h4></a>
-<nav>
-    <ul>
-        <li>
-            <a href="../maquinaria/maquinaria.html">maquinaria</a>
-        </li>
-        <li>
-        <a href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a>
-        </li>
-        <li>
-            <a href="../productos/productos.html">productios</a>
-        </li>
-        <li>
-            <a href="../servicios/servicios.html">servicios</a>
-        </li>
-    </ul>
-</nav>
-</header>
-<sectiont id="supergrid">
-<article id="tituloserv" class="tituloservi">servicios que ofrecemos</article>
+    <header class="headerfooter">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></div>
+                <div class="col-6 d-flex align-items-center">
+                        <ul>
+                            <li><a class="navbarheader" href="../index.html">INICIO</a></li>
+                            <li><a class="navbarheader" href="../nuestraempresa/nuestraempresa.html">nuestra empresa</a></li>
+                            <li><a class="navbarheader" href="../maquinaria/maquinaria.html">maquinaria</a></li>
+                            <li><a class="navbarheader" href="../productos/productos.html">productos</a></li>
+                            <li><a class="navbarheader" href="../servicios/servicios.html">servicios</a></li>
+                        </ul>
+                </div>
+            </div>
+        </div>
+    </header>
 
-<article id="di" class="">
-    <div>Desinsectacion (DI)</div>
-<div class="descserv">servicio de desinsectacion peimetral interrna y externa perri</div>
-</article>
+<div class="container-fluid">
+<div class="row">
+    <div class="col-12 d-flex justify-content-center ">
+        <h3>Que servicios ofrecemos?</h3>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12 col md-6 col-lg-3 col-xl-3 mb-2">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title d-flex justify-content-center">Desinsectacion</h4>
+                <p class="card-text">
+                    Son las técnicas de saneamiento dirigidas a eliminar o controlar la población de insectos y otros artrópodos.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 col-md-6 col-lg6 col-xl-6 mb-2">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title d-flex justify-content-center">Control de larvas en espacios verdes</h4>
+                <p class="card-text">
+El crecimiento poblacional de los últimos 50 años ha producido un crecimiento urbano increíble, produciendo a la vez, deterioro de los servicios de saneamientos básicos.
+Todo esto favorece el aumento de mosquitos cohabitando íntimamente con poblaciones humanas.
+Los mosquitos son responsables de la transmisión de cuantiosas enfermedades, entre ella el Virus del Dengue.
 
-<article id="dr" class="estilosserv">
-    <div>Desratizacion (DR)</div>
-    <div class="descserv">servicio de desinsectacion peimetral interrna y externa perri</div>
-</article>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 col md-6 col-lg-3 col-xl-3 mb-2">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title d-flex justify-content-center">desinfeccion</h4>
+                <p class="card-text">
+                    Es la técnica para destruir gérmenes, como virus, bacterias y otros microbios que causan infecciones y enfermedades.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12 col-md-6 col-lg6 col-xl-6 mb-2">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title d-flex justify-content-center">Tratamientos de Hormiga de techo</h4>
+                <p class="card-text">
+                    Las hormigas tienen una gran adaptación a distintos medios, motivando que se conviertan en una especie endémica. A través de su observación, registran un interesante entramado social donde conviven en colonias de variada población.
+En ellas, cada miembro posee una función y un trabajo específico con el fin de asegurar la supervivencia del conjunto.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 col md-6 col-lg-3 col-xl-3 mb-2">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title d-flex justify-content-center">desratizacion</h4>
+                <p class="card-text">
+El crecimiento poblacional de los últimos 50 años ha producido un crecimiento urbano increíble, produciendo a la vez, deterioro de los servicios de saneamientos básicos.
 
-<article id="lt" div="estilosserv">
-    <div>Limpieza de tnques (LT)</div>
-    <div class="descserv">Nunc scelerisque ac mauris vel condimentum. Praesent tristique nec dui quis lobortis. Donec sit amet dolor lectus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae</div>
-</article>
 
-<article id="larvas" class="estilosserv">
-    <div>control larvas espacios verdes (CL)</div>
-    <div id="larvax" class="descserv">A la plaza que un césped dibuja, ralo y pobre,
-        y donde todo está correcto, flores, árboles,
-        los burgueses jadeantes, que ahogan los calores,
-        traen todos los jueves, de noche, su estulticia.
-        
-        -La banda militar, en medio del jardín,
-        con el Vals de los pífanos el chacó balancea:
-        -Se exhibe el lechuguino en las primeras filas
-        y el notario es tan sólo los dijes que le cuelgan.</span>
-</article>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-12 col md-6 col-lg-3 col-xl-3 mb-2">
+        <div class="card">
+            <div class="card-body">
+                <h4 class="card-title d-flex justify-content-center">Control murcielagos</h4>
+                <p class="card-text">
+                    Esta especie que tiene un rol importantísimo en el manejo ecológico del medio, d
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 
-<article id="df" class="estilosserv">
-<div>Desinfeccion(DF)</div>
-<div class="descserv">servicio de desinsectacion peimetral interrna y externa perri</div>
-</article>
-</section>
+</div>
+
 
 
 <footer>
     <section>
-        <div class="colorfooter">
-            <h3 class="mifooty">Contactanos</h3>
-                <div class="estilosfooterpapi">
-                    <span>4294-0805</span>
-                    <span>11-039-456</span>
-                    <span>instagram</span> 
-                    <span>facebook</span>
+        <div class="headerfooter">
+                <div class="d-flex justify-content-around">
+                    <span class="navbarheader">4294-0805</span>
+                    <span class="navbarheader">11-039-456</span>
+                    <span class="navbarheader">instagram</span> 
+                    <span class="navbarheader">facebook</span>
                 </div>
-                <div class="estilosfooterpapiimagenes">
-                    <i class="fa fa-phone"></i>
-                    <i class="fa fa-whatsap"></i>
-                    <i class="fa fa-instagram"></i>
-                    <i class="fa fa-facebook"></i>
+                <div class="d-flex justify-content-around">
+                    <i class="fa fa-phone navbarheader"></i>
+                    <i class="fa-brands fa-whatsapp navbarheader"></i>
+                    <i class="fa fa-instagram navbarheader"></i>
+                    <i class="fa fa-facebook navbarheader"><a href="https://www.youtube.com/watch?v=tPGW33Ekpvg&list=RDge3-8yB3P-Y&index=4">seguinos</a></i>
                 </div>
         </div>
     </section>
