corte de pagina

--- a/index.html
+++ b/index.html
@@ -44,8 +44,15 @@
             </div>
             <div class="col-12">
                 <div class="sectioncortapag d-flex flex-nowrap justify-content-around">
-                    <p class="display-4">empresa habilitada en provincia de BSAS</p><i class="fa-solid fa-file-circle-check"></i>
+                    <p class="display-4">empresa habilitada en provincia de BSAS</p><i class=" maschico fa-solid fa-file-circle-check"></i>
                     
+                </div>
+            </div>
+            <div class="col-12 ">
+                <div class=" sectioncertificates d-flex justify-content-between">
+                    <a href="">certificado habilitacion ingeniera sanitaria</a>
+                    <a href="">certificado habilitacion provincia de BSAS</a>
+                    <a href="">certificado extencion CABA</a>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-6 mb-3 mb-xl-1">
