añadi jason jaja no entiendo nada pero ya lo voy a aprender a usar

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
     <script src="/jquery.slim.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="assets/css/estilos.css">
+    <link rel="stylesheet" href="assets/css/animate.css">
+    <script src="/js/wow.js"></script>
 </head>
 <body>
     <header class="headerfooter">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6"><img src="./assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></div>
+                <div class="col-6"><link rel="stylesheet" href="./index.html"><img src="./assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></div>
                 <div class="col-6 d-flex align-items-center">
                         <ul>
                             <li><a class="navbarheader" href="./nuestraempresa/nuestraempresa.html">nuestra empresa</a></li>
@@ -44,7 +46,7 @@
             </div>
             <div class="col-12">
                 <div class="sectioncortapag d-flex flex-nowrap justify-content-around">
-                    <p class="display-4">empresa habilitada en provincia de BSAS</p><i class=" maschico fa-solid fa-file-circle-check"></i>
+                    <p class="display-4">empresa habilitada en provincia de BSAS</p><i class="  maschico fa-solid fa-file-circle-check" ></i>
                     
                 </div>
             </div>
