pude poner el sass porfin dios

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="/jquery.slim.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="assets/css/estilos.css">
+    <link rel="stylesheet" href="scss/estilos.scss">
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/animate.css">
     <script src="/js/wow.js"></script>
 </head>
@@ -21,8 +23,8 @@
     <header class="headerfooter">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6"><link rel="stylesheet" href="./index.html"><img src="./assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></div>
-                <div class="col-6 d-flex align-items-center">
+                <div class="col-6"><a href="./index.html"><img src="./assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
+                <div class="col-6 d-flex align-items-end justify-content-end">
                         <ul>
                             <li><a class="navbarheader" href="./nuestraempresa/nuestraempresa.html">nuestra empresa</a></li>
                             <li><a class="navbarheader" href="./maquinaria/maquinaria.html">maquinaria</a></li>
@@ -61,7 +63,10 @@
                 <div class="card">
                     <img class="card-img-top" src="./assets/imagenes/jefa.jpg" height="200px">
                     <div class="card-body"> "Deseamos poner en su conocimiento las operatorias y servicios que estamos en condiciones de poder ofrecerle.
-                        WES FUMIGACIONES fue creada en 2003; su Titular Johana Djetzerniak, está ligada a la actividad de Saneamiento Ambiental desde 1996, participando de otras empresas de similares características. <a class="linksentext" href="./nuestraempresa/nuestraempresa.html" >conoce más</a> </div>
+                        WES FUMIGACIONES fue creada en 2003; su Titular Johana Djetzerniak, está ligada a la actividad de Saneamiento Ambiental desde 1996, 
+                        participando de otras empresas de similares características. 
+                        <a class="linksentext" href="./nuestraempresa/nuestraempresa.html" >conoce más</a>
+                    </div>
                 </div>
             </div>
             <div class="col-12 col-md-6 col-lg-6 col-xl-6 mb-3 mb-xl-1">
