--- a/servicios/servicios.html
+++ b/servicios/servicios.html
@@ -21,7 +21,7 @@
     <header class="headerfooter">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></div>
+                <div class="col-6"><a href="../index.html"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
                 <div class="col-6 d-flex align-items-center">
                         <ul>
                             <li><a class="navbarheader" href="../index.html">INICIO</a></li>
