--- a/maquinaria/maquinaria.html
+++ b/maquinaria/maquinaria.html
@@ -20,7 +20,7 @@
     <header class="headerfooter">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></div>
+                <div class="col-6"><a href="../index.html"><img src="../assets/imagenes/LOGO.png" height="60px" width="60px" alt=""></a></div>
                 <div class="col-6 d-flex align-items-center">
                         <ul>
                             <li><a class="navbarheader" href="../index.html">INICIO</a></li>
@@ -34,12 +34,12 @@
         </div>
     </header>
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-12 d-flex justify-content-center"><h3>Maquinaria</h3></div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-3 mb-2">
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">Motomochila</p>
@@ -50,7 +50,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-3 mb-2">
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">pulverizadora manual</p>
@@ -61,7 +61,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-3 mb-2">
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">termo-fog</p>
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-4 col-lg-3 col-xl-3">
+            <div class="col-12 col-md-4 col-lg-3 col-xl-3 mb-2">
                 <div class="card">
                     <div class="card-body">
                         <p class="card-text">ULV</p>
